@@ -1,4 +1,5 @@
-Version 5.2.14 - 2020-04-04
+* Allow column sql types to be retrieved from the table handler
+
 * Bug fixes (see mercurial logs for details)
 
 Version 5.2.13 - 2020-03-09
